<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="register_easy_biometry">Регистрация упрощённой биометрии</string>
    <string name="close">Close</string>
    <string name="follow_instructions">Следуйте инструкциям в приложении</string>
    <string name="man">man</string>
    <string name="register">Зарегистрировать</string>
    <string name="make_selfie">Сделайте селфи</string>
    <string name="text_rules">на однотонном, светлом фоне,\n при хорошем освещении</string>
    <string name="see_requirements">Посмотреть требования</string>
    <string name="take_photo">Сделать фото</string>
    <string name="voice_recording">Запись голоса</string>
    <string name="start_recording">Начать запись</string>
    <string name="three_records">Три записи голоса</string>
    <string name="voices_rules">тихое помещение без эха,\n четкое произношение цифр</string>
    <string name="skip">Пропустить</string>
    <string name="record_voice">Записать голос</string>
    <string name="photo_requirements">Требования к фото</string>
    <string name="recording_is">Запись %1$d</string>
    <string name="default_voice_hint">Произносите цифры четко без пауз</string>
    <string name="stop_recording">Остановить запись</string>
    <string name="retry">Перезаписать</string>
    <string name="_continue">Продолжить</string>
    <string name="done">Готово!</string>
    <string name="try_one_more">Попробовать еще раз</string>
    <string name="photo_captured">Фото сделано</string>
    <string name="captured_image">Captured Image</string>
    <string name="send">Отправить</string>
    <string name="you_could_take_photo">Можете смело делать фото</string>
    <string name="check_photo_quality">Проверьте качество фото</string>
    <string name="more_that_one_face">Больше одного лица на изображении</string>
    <string name="no_person">Лицо плохо видно</string>
    <string name="continue_recording">Продолжить запись</string>
    <string name="finish">Завершить</string>
    <string name="exit">Выйти</string>
    <string name="success_reg">Вы успешно зарегистрировали\nупрощённую биометрию</string>
    <string name="congrats">Поздравляем!</string>
    <string name="your_eyes_are_closed">Откройте глаза</string>
</resources>