<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/exitButton"
        android:layout_width="@dimen/_40dp"
        android:layout_height="@dimen/_40dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="12dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/close"
        android:src="@drawable/red_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/voiceStartHuman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/man"
        android:src="@drawable/human_voice"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exitButton"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/finalPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/three_records"
        android:textColor="@color/text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/voiceStartHuman" />

    <TextView
        android:id="@+id/finalPageDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:letterSpacing="0.03125"
        android:text="@string/voices_rules"
        android:textColor="@color/text_secondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/finalPageTitle" />


    <Button
        android:id="@+id/voiceStartRecord"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/custom_button_blue"
        android:elevation="0dp"
        android:stateListAnimator="@null"
        android:text="@string/record_voice"
        android:textAllCaps="false"
        android:textColor="@color/background"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/voiceSkipRecord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/voiceSkipRecord"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/custom_button_white"
        android:elevation="0dp"
        android:stateListAnimator="@null"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="@color/primary"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/dotStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <View
        android:id="@+id/dotStart"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/background_circle_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/dotBlue"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/background_circle_active"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>