<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black_70"
        android:elevation="0.5dp"
        android:paddingBottom="@dimen/_40dp"
        app:layout_constraintBottom_toBottomOf="@id/alphaBottom"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgCaptured"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:src="@drawable/glasses"
        android:contentDescription="@string/captured_image"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/txtPhotoCaptured"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:elevation="1dp"
        android:text="@string/photo_captured"
        android:textColor="@color/background"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/exitButton"
        android:layout_width="@dimen/_40dp"
        android:layout_height="@dimen/_40dp"
        android:layout_marginEnd="12dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/close"
        android:elevation="1dp"
        android:src="@drawable/white_close"
        app:layout_constraintBottom_toBottomOf="@id/txtPhotoCaptured"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtPhotoCaptured" />

    <TextView
        android:id="@+id/txtCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/background_hint_card"
        android:drawablePadding="12dp"
        android:elevation="1dp"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:padding="16dp"
        android:textColor="@color/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exitButton"
        android:text="@string/check_photo_quality" />

    <Space
        android:id="@+id/alphaBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtCard"
        android:layout_marginTop="16dp"/>


    <Button
        android:id="@+id/sendButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/custom_button_blue"
        android:text="@string/send"
        android:layout_marginBottom="40dp"
        android:textAllCaps="false"
        android:elevation="0dp"
        android:stateListAnimator="@null"
        android:textColor="@color/background"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>